votepage now display the qns and options

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- Primary colors -->
+    <color name="colorPrimary">#6200EE</color> <!-- Example color -->
+    <color name="colorPrimaryDark">#3700B3</color> <!-- Example color -->
+    <color name="colorAccent">#03DAC5</color> <!-- Example color -->
+    <color name="background">#f0f0f0</color>
+
+    <color name="choice_a">#EF9A9A</color>
+    <color name="choice_b">#90CAF9</color>
+    <color name="choice_c">#A5D6A7</color>
+    <color name="choice_d">#FFF59D</color>
 </resources>
