--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/background"
+    android:padding="8dp"
+    android:gravity="center">
 
     <Button
-        android:id="@+id/buttonA"
+        android:id="@+id/buttonChoiceA"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose A" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/choice_a"
+        android:backgroundTint="@color/choice_a"
+        android:textAppearance="@style/ButtonText"
+        android:onClick="onChoiceClick" />
 
     <Button
-        android:id="@+id/buttonB"
+        android:id="@+id/buttonChoiceB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose B" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/choice_b"
+        android:backgroundTint="@color/choice_b"
+        android:textAppearance="@style/ButtonText"
+        android:onClick="onChoiceClick" />
 
     <Button
-        android:id="@+id/buttonC"
+        android:id="@+id/buttonChoiceC"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose C" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/choice_c"
+        android:backgroundTint="@color/choice_c"
+        android:textAppearance="@style/ButtonText"
+        android:onClick="onChoiceClick" />
+
+    <Button
+        android:id="@+id/buttonChoiceD"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/choice_d"
+        android:backgroundTint="@color/choice_d"
+        android:textAppearance="@style/ButtonText"
+        android:onClick="onChoiceClick" />
+
 </LinearLayout>
