Removed nextQuestion button on android

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:textAppearance="@style/ButtonText"
         android:onClick="onChoiceClick" />
 
-    <!-- Next Question Button -->
+    <!-- Next Question Button
     <Button
         android:id="@+id/buttonNext"
         android:layout_width="match_parent"
@@ -84,4 +84,5 @@
         android:textSize="18sp"
         android:onClick="onNextQuestion"
         android:layout_marginTop="16dp" />
+        -->
 </LinearLayout>
